# GrpcApiPractice

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
CMake/: GenerateProtobuf.cmake
Models/: Client.hpp  Invoice.hpp  InvoiceDetails.hpp  Product.hpp
Protos/Models/: Client.proto  Invoice.proto  InvoiceDetails.proto  Product.proto  ServiceStatus.proto
Protos/Protobuf/Models/: Client.grpc.pb.cc  Client.grpc.pb.h  Client.pb.cc  Client.pb.h  Client_mock.grpc.pb.h  Invoice.grpc.pb.cc  Invoice.grpc.pb.h  Invoice.pb.cc  Invoice.pb.h  InvoiceDetails.grpc.pb.cc  InvoiceDetails.grpc.pb.h  InvoiceDetails.pb.cc  InvoiceDetails.pb.h  InvoiceDetails_mock.grpc.pb.h  Invoice_mock.grpc.pb.h  Product.grpc.pb.cc  Product.grpc.pb.h  Product.pb.cc  Product.pb.h  Product_mock.grpc.pb.h  ServiceStatus.grpc.pb.cc  ServiceStatus.grpc.pb.h  ServiceStatus.pb.cc  ServiceStatus.pb.h  ServiceStatus_mock.grpc.pb.h
Protos/Protobuf/Services/: ClientService.grpc.pb.cc  ClientService.grpc.pb.h  ClientService.pb.cc  ClientService.pb.h  ClientService_mock.grpc.pb.h  InvoiceService.grpc.pb.cc  InvoiceService.grpc.pb.h  InvoiceService.pb.cc  InvoiceService.pb.h  InvoiceService_mock.grpc.pb.h  ProductService.grpc.pb.cc  ProductService.grpc.pb.h  ProductService.pb.cc  ProductService.pb.h  ProductService_mock.grpc.pb.h
Protos/Services/: ClientService.proto  InvoiceService.proto  ProductService.proto
Repository/: ClientRepository.cpp  ClientRepository.hpp  Database.cpp  Database.hpp  InvoiceDetailsRepository.cpp  InvoiceDetailsRepository.hpp  InvoiceRepository.cpp  InvoiceRepository.hpp  ProductRepository.cpp  ProductRepository.hpp
Services/: ClientService.cpp  ClientService.hpp  InvoiceService.cpp  InvoiceService.hpp  ProductService.cpp  ProductService.hpp
